# macos-jarvis

./: .env.example  .gitignore  LICENSE  PRD.md  README.md  install.sh  pyproject.toml
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-05-26-jarvis-implementation.md
docs/superpowers/specs/: 2026-05-26-jarvis-macos-assistant-design.md
src/jarvis/: audio.py  brain.py  config.py  ears.py  eyes.py  hands.py  main.py  mouth.py  wake.py
tests/: test_audio.py  test_brain.py  test_config.py  test_ears.py  test_eyes.py  test_hands.py  test_main.py  test_mouth.py  test_wake.py
