[project]
name = "jarvis"
version = "0.1.0"
description = "Streamlined macOS Spatial Voice Assistant"
requires-python = ">=3.11"
dependencies = [
    "openwakeword",
    "mlx-whisper",
    "mlx-audio",
    "opencv-python",
    "openai",
    "sounddevice",
    "numpy",
    "pydantic-settings",
    "pyaudio",
]

[project.scripts]
jarvis = "jarvis.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
