[project]
name = "jarvis"
version = "0.1.0"
description = "Streamlined macOS Spatial Voice Assistant"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "openwakeword",
    "mlx-whisper",
    "mlx-audio",
    "opencv-python",
    "sounddevice",
    "numpy",
    "pydantic-settings",
    "misaki[en]>=0.9.4",
    "num2words>=0.5.14",
    "anthropic>=0.104.1",
]

[project.scripts]
jarvis = "jarvis.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
