[project]
name = "macos-jarvis"
version = "0.1.0"
description = "Voice-controlled macOS assistant on Apple Silicon — local wake word, STT, and TTS with Claude for reasoning"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lucca Paradeda", email = "luccaparadedaprofessional@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/luccaparadeda/macos-jarvis"
Repository = "https://github.com/luccaparadeda/macos-jarvis"
Issues = "https://github.com/luccaparadeda/macos-jarvis/issues"
dependencies = [
    "openwakeword",
    "mlx-whisper",
    "mlx-audio",
    "opencv-python",
    "sounddevice",
    "numpy",
    "pydantic-settings",
    "misaki[en]>=0.9.4",
    "num2words>=0.5.14",
    "anthropic>=0.104.1",
]

[project.scripts]
jarvis = "jarvis.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]
